// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IndexOTU /> should render when [changeCount = 1] 1`] = `
<OTU__StyledIndexOTU>
  <Link
    to="/refs/foo/otus/bar"
  >
    baz
  </Link>
  <Badge>
    1
     
    change
  </Badge>
</OTU__StyledIndexOTU>
`;

exports[`<IndexOTU /> should render when [changeCount = 2] 1`] = `
<OTU__StyledIndexOTU>
  <Link
    to="/refs/foo/otus/bar"
  >
    baz
  </Link>
  <Badge>
    2
     
    changes
  </Badge>
</OTU__StyledIndexOTU>
`;
